--- a/themes/gtk-3.0-base/init/_all.scss
+++ b/themes/gtk-3.0-base/init/_all.scss
@@ -7,6 +7,7 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
+@import "scheme";
 @import "button";
 @import "start-menu";
 @import "systray";
