--- a/themes/gtk-3.0-base/init/scheme.scss
+++ b/themes/gtk-3.0-base/init/scheme.scss
@@ -7,8 +7,8 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$3d_objects_bg: #171717 !default;
-$3d_objects_fg: #171717 !default;
+$threed_objects_bg: #171717 !default;
+$threed_objects_fg: #171717 !default;
 
 $active_title_bar_bg1:         #171717    !default;
 $active_title_bar_bg2:         #171717    !default;
