--- a/themes/luna/blue/gtk-3.0/scheme.scss
+++ b/themes/luna/blue/gtk-3.0/scheme.scss
@@ -7,8 +7,8 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$3d_objects_bg: #ECE9D8;
-$3d_objects_fg: #000000;
+$threed_objects_bg: #ECE9D8;
+$threed_objects_fg: #000000;
 
 $active_title_bar_bg1: #0053E3;
 $active_title_bar_bg2: #3D94FF;
