--- a/themes/native/gtk-3.0/scheme.scss
+++ b/themes/native/gtk-3.0/scheme.scss
@@ -7,8 +7,8 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$3d_objects_bg: #D4D0C8;
-$3d_objects_fg: #000000;
+$threed_objects_bg: #D4D0C8;
+$threed_objects_fg: #000000;
 
 $active_title_bar_bg1: #09066A;
 $active_title_bar_bg2: #A6CAF0;
