--- a/themes/professional/gtk-3.0/scheme.scss
+++ b/themes/professional/gtk-3.0/scheme.scss
@@ -7,8 +7,8 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$3d_objects_bg: #EBEBE4;
-$3d_objects_fg: #000000;
+$threed_objects_bg: #EBEBE4;
+$threed_objects_fg: #000000;
 
 $active_title_bar_bg1: #5298F9;
 $active_title_bar_bg2: #3573D6;
