--- a/themes/professional/gtk-3.0/scheme.scss
+++ b/themes/professional/gtk-3.0/scheme.scss
@@ -53,7 +53,7 @@ $menu_bg: #FFFFFF;
 $menu_fg: #000000;
 $menu_font_family: "Tahoma";
 $menu_font_size: 8pt;
-$menu_font_style: normal
+$menu_font_style: normal;
 $menu_font_weight: normal;
 $menu_size: 19;
 
