--- a/themes/luna/blue/gtk-3.0/main.scss
+++ b/themes/luna/blue/gtk-3.0/main.scss
@@ -1,4 +1,13 @@
-/** Temporary full compile from GTK 3 base **/
+/**
+ * main.scss - Luna (Blue) Style GTK 3 Theme Root Document
+ *
+ * This source-code is part of the Windows XP stuff for XFCE:
+ * <<https://www.oddmatics.uk>>
+ *
+ * Author(s): Rory Fewell <roryf@oddmatics.uk>
+ */
+
 @import "scheme";
 @import "../../../gtk-3.0-base/required";
+@import "styling/all";
 @import "../../../gtk-3.0-base/main";
