--- a/themes/gtk-3.0-base/styling/button.scss
+++ b/themes/gtk-3.0-base/styling/button.scss
@@ -21,13 +21,13 @@ $button_styles:
     wintc_define_props_borders(
         $button_styles,
         true,
-        outset,
-        1,
-        2,
-        2,
-        1,
-        #FFF darken($threed_objects_bg, 45%) darken($threed_objects_bg, 45%) #FFF,
-        undefined
+        solid,
+        3,
+        3,
+        3,
+        3,
+        undefined,
+        url('../Resources/button_border.png')
     );
 
 $button_focused_styles:
@@ -44,13 +44,13 @@ $button_focused_styles:
     wintc_define_props_borders(
         $button_focused_styles,
         true,
+        solid,
+        3,
+        3,
+        3,
+        3,
         undefined,
-        undefined,
-        undefined,
-        undefined,
-        undefined,
-        darken($threed_objects_bg, 65%),
-        undefined
+        url('../Resources/button_active_border.png')
     );
 
 $button_hover_styles:
@@ -67,13 +67,13 @@ $button_hover_styles:
     wintc_define_props_borders(
         $button_hover_styles,
         true,
+        solid,
+        3,
+        3,
+        3,
+        3,
         undefined,
-        undefined,
-        undefined,
-        undefined,
-        undefined,
-        undefined,
-        undefined
+        url('../Resources/button_border.png')
     );
 
 $button_press_styles:
@@ -90,13 +90,13 @@ $button_press_styles:
     wintc_define_props_borders(
         $button_press_styles,
         true,
-        inset,
-        2,
-        2,
-        2,
-        2,
-        darken($threed_objects_bg, 30%),
-        undefined
+        solid,
+        3,
+        3,
+        3,
+        3,
+        undefined,
+        url('../Resources/button_press_border.png')
     );
 
 $button_inactive_styles:
