--- a/themes/luna/blue/gtk-3.0/styling/taskband.scss
+++ b/themes/luna/blue/gtk-3.0/styling/taskband.scss
@@ -9,31 +9,128 @@
 
 // Taskband itself
 //
-$taskband_horz_margins: 7px !default;
-
-$taskband_background:   linear-gradient(180deg, rgba(49,104,213,1) 0%, rgba(73,147,230,1) 9%, rgba(36,93,215,1) 18%, rgba(36,93,219,1) 50%, rgba(37,97,222,1) 89%, rgba(25,65,165,1) 100%) !default;
-$taskband_border_size:  0px !default;
-$taskband_border_image: none !default;
-$taskband_fg_color:     #FFFFFF !default;
+$taskband_styles:
+    wintc_define_props_bg(
+        $taskband_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        linear-gradient(180deg, rgba(49,104,213,1) 0%, rgba(73,147,230,1) 9%, rgba(36,93,215,1) 18%, rgba(36,93,219,1) 50%, rgba(37,97,222,1) 89%, rgba(25,65,165,1) 100%)
+    );
+$taskband_styles:
+    wintc_define_props_borders(
+        $taskband_styles,
+        false,
+        none,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined
+    );
+$taskband_styles:
+    wintc_define_props_fg(
+        $taskband_styles,
+        false,
+        #FFFFFF,
+        undefined
+    );
 
 // Taskband buttons
 //
-$taskband_button_background:   url("../Resources/gtk-3.0/taskband_button_body.png"), linear-gradient(162deg, rgba(112,170,250,1) 0%, rgba(57,123,242,1) 10%, rgba(57,123,242,1) 100%) !default;
-$taskband_button_border:       2px solid #000 !default;
-$taskband_button_border_image: url("../Resources/gtk-3.0/taskband_button_border.png") 2 2 2 2 stretch !default;
+$taskband_button_styles:
+    wintc_define_props_bg(
+        $taskband_button_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_body.png"), linear-gradient(162deg, rgba(112,170,250,1) 0%, rgba(57,123,242,1) 10%, rgba(57,123,242,1) 100%)
+    );
+$taskband_button_styles:
+    wintc_define_props_borders(
+        $taskband_button_styles,
+        false,
+        solid,
+        2,
+        2,
+        2,
+        2,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_border.png")
+    );
 
-$taskband_button_hover_background:   url("../Resources/gtk-3.0/taskband_button_hover_body.png"), linear-gradient(126deg, rgba(145,201,255,1) 0%, rgba(145,201,255,1) 90%, rgba(49,132,255,1) 98%, rgba(49,132,255,1) 100%) !default;
-$taskband_button_hover_border:       2px solid #000 !default;
-$taskband_button_hover_border_image: url("../Resources/gtk-3.0/taskband_button_hover_border.png") 2 2 2 2 stretch !default;
+$taskband_button_hover_styles:
+    wintc_define_props_bg(
+        $taskband_button_hover_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_hover_body.png"), linear-gradient(126deg, rgba(145,201,255,1) 0%, rgba(145,201,255,1) 90%, rgba(49,132,255,1) 98%, rgba(49,132,255,1) 100%)
+    );
+$taskband_button_hover_styles:
+    wintc_define_props_borders(
+        $taskband_button_hover_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_hover_border.png")
+    );
 
-$taskband_button_press_background:   url("../Resources/gtk-3.0/taskband_button_press_body.png"), linear-gradient(126deg, rgba(22,76,168,1) 0%, rgba(42,93,182,1) 10%, rgba(42,93,182,1) 100%) !default;
-$taskband_button_press_border:       2px solid #000 !default;
-$taskband_button_press_border_image: url("../Resources/gtk-3.0/taskband_button_press_border.png") 2 2 2 2 stretch !default;
+$taskband_button_press_styles:
+    wintc_define_props_bg(
+        $taskband_button_press_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_press_body.png"), linear-gradient(126deg, rgba(22,76,168,1) 0%, rgba(42,93,182,1) 10%, rgba(42,93,182,1) 100%)
+    );
+$taskband_button_press_styles:
+    wintc_define_props_borders(
+        $taskband_button_press_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_press_border.png")
+    );
 
-$taskband_button_selected_background:   $taskband_button_press_background !default;
-$taskband_button_selected_border:       $taskband_button_press_border !default;
-$taskband_button_selected_border_image: $taskband_button_press_border_image !default;
+$taskband_button_selected_styles: $taskband_button_press_styles;
 
-$taskband_button_selected_hover_background:   url("../Resources/gtk-3.0/taskband_button_press_hover_body.png"), linear-gradient(126deg, rgba(51,106,222,1) 0%, rgba(54,116,232,1) 10%, rgba(54,116,232,1) 100%) !default;
-$taskband_button_selected_hover_border:       2px solid #000 !default;
-$taskband_button_selected_hover_border_image: url("../Resources/gtk-3.0/taskband_button_press_hover_border.png") 2 2 2 2 stretch !default;
+$taskband_button_selected_hover_styles:
+    wintc_define_props_bg(
+        $taskband_button_selected_hover_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_press_hover_body.png"), linear-gradient(126deg, rgba(51,106,222,1) 0%, rgba(54,116,232,1) 10%, rgba(54,116,232,1) 100%)
+    );
+$taskband_button_selected_hover_styles:
+    wintc_define_props_borders(
+        $taskband_button_selected_hover_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        url("../Resources/gtk-3.0/taskband_button_press_hover_border.png")
+    );
