--- a/themes/gtk-3.0-base/drawing/buttons.scss
+++ b/themes/gtk-3.0-base/drawing/buttons.scss
@@ -69,7 +69,7 @@
     $_blank_edge:    if($edge == none, none, _widget_edge(transparentize($edge, 1)));
     $_button_shadow: 0 1px 2px transparentize($shadow_color, 0.03);
     
-    color: $tc;
+    //color: $tc;
 
     @include __wintc_apply_specific_props(
         $button_styles,
