--- a/themes/professional/gtk-3.0/styling/taskband.scss
+++ b/themes/professional/gtk-3.0/styling/taskband.scss
@@ -9,29 +9,153 @@
 
 // Taskband itself
 //
-$taskband_background:   $bg_color;
-$taskband_border_size:  3px 0px 1px 0px;
-$taskband_border_image: url("../Resources/gtk-3.0/taskband_horz_border.png") 3px 0px 1px 0px stretch;
-$taskband_fg_color:     #000000;
+$taskband_styles:
+    wintc_define_props_bg(
+        $taskband_styles,
+        false,
+        $bg_color,
+        undefined,
+        undefined,
+        undefined,
+        undefined
+    );
+/**
+FIXME: Figure out borders on the panel one day
+
+$taskband_styles:
+    wintc_define_props_borders(
+        $taskband_styles,
+        false,
+        solid,
+        3,
+        0,
+        1,
+        0,
+        undefined,
+        url('../Resources/gtk-3.0/taskband_horz_border.png')
+    );
+**/
+$taskband_styles:
+    wintc_define_props_fg(
+        $taskband_styles,
+        false,
+        $fg_color,
+        undefined
+    );
 
 // Taskband buttons
 //
-$taskband_button_background:   $bg_color;
-$taskband_button_border:       1px solid $bg_color;
-$taskband_button_border_image: none;
+$taskband_button_styles:
+    wintc_define_props_bg(
+        $taskband_button_styles,
+        false,
+        $bg_color,
+        undefined,
+        undefined,
+        undefined,
+        none // Necessary to override standard button gradient
+    );
+$taskband_button_styles:
+    wintc_define_props_borders(
+        $taskband_button_styles,
+        false,
+        solid,
+        1,
+        1,
+        1,
+        1,
+        $bg_color,
+        undefined
+    );
 
-$taskband_button_hover_background:   #D9E8FA;
-$taskband_button_hover_border:       1px solid #BBC3D7;
-$taskband_button_hover_border_image: none;
+$taskband_button_hover_styles:
+    wintc_define_props_bg(
+        $taskband_button_hover_styles,
+        false,
+        #D9E8FA,
+        undefined,
+        undefined,
+        undefined,
+        undefined
+    );
+$taskband_button_hover_styles:
+    wintc_define_props_borders(
+        $taskband_button_hover_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        #BBC3D7,
+        undefined
+    );
 
-$taskband_button_press_background:   #2469BF;
-$taskband_button_press_border:       1px solid #2160AF;
-$taskband_button_press_border_image: none;
+$taskband_button_press_styles:
+    wintc_define_props_bg(
+        $taskband_button_press_styles,
+        false,
+        #2469BF,
+        undefined,
+        undefined,
+        undefined,
+        undefined
+    );
+$taskband_button_press_styles:
+    wintc_define_props_borders(
+        $taskband_button_press_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        #2160AF,
+        undefined
+    );
 
-$taskband_button_selected_background:   #AACFFE;
-$taskband_button_selected_border:       1px solid #92AED4;
-$taskband_button_selected_border_image: none;
+$taskband_button_selected_styles:
+    wintc_define_props_bg(
+        $taskband_button_selected_styles,
+        false,
+        #AACFFE,
+        undefined,
+        undefined,
+        undefined,
+        undefined
+    );
+$taskband_button_selected_styles:
+    wintc_define_props_borders(
+        $taskband_button_selected_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        #92AED4,
+        undefined
+    );
 
-$taskband_button_selected_hover_background:   $taskband_button_press_background;
-$taskband_button_selected_hover_border:       $taskband_button_press_border;
-$taskband_button_selected_hover_border_image: $taskband_button_press_border_image;
+$taskband_button_selected_hover_styles:
+    wintc_define_props_bg(
+        $taskband_button_selected_hover_styles,
+        false,
+        #2469BF,
+        undefined,
+        undefined,
+        undefined,
+        undefined
+    );
+$taskband_button_selected_hover_styles:
+    wintc_define_props_borders(
+        $taskband_button_selected_hover_styles,
+        false,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        undefined,
+        #2160AF,
+        undefined
+    );
