--- a/themes/gtk-3.0-base/colors/notebook.scss
+++ b/themes/gtk-3.0-base/colors/notebook.scss
@@ -7,6 +7,7 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
+// FIXME: This should be defined in styling
 $notebook_bg_color:          #FCFCFE !default;
 $notebook_borders_color:     #919B9C !default;
 $notebook_selected_bg_color: #FCFCFE !default;
