--- a/themes/gtk-3.0-base/colors/progressbar.scss
+++ b/themes/gtk-3.0-base/colors/progressbar.scss
@@ -7,5 +7,5 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$progress_bg_color:     #21a121;
+$progress_bg_color:     #21a121; // FIXME: Is this relevant?
 $progress_border_color: transparent;
