--- a/themes/gtk-3.0-base/colors/scrollbar.scss
+++ b/themes/gtk-3.0-base/colors/scrollbar.scss
@@ -7,7 +7,7 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$scrollbar_bg_color:            if($variant == 'light', mix($bg_color, $fg_color, 80%),  mix($base_color, $fg_color, 50%));
-$scrollbar_slider_active_color: if($variant == 'light', darken($selected_bg_color, 10%), lighten($selected_bg_color, 10%));
+$scrollbar_bg_color:            mix($bg_color, $fg_color, 80%);
+$scrollbar_slider_active_color: darken($selected_bg_color, 10%);
 $scrollbar_slider_color:        mix($fg_color, $bg_color, 60%);
 $scrollbar_slider_hover_color:  mix($fg_color, $bg_color, 80%);
