--- a/themes/gtk-3.0-base/colors/treeview.scss
+++ b/themes/gtk-3.0-base/colors/treeview.scss
@@ -7,6 +7,7 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
+// FIXME: Check these, are they background colours?
 $treeview_header_color:              #EBEADB !default;
 $treeview_header_hover_color:        #FFFFFF !default;
 $treeview_header_active_color:       #DEDFDA !default;
