--- a/themes/gtk-3.0-base/colors/checkradio.scss
+++ b/themes/gtk-3.0-base/colors/checkradio.scss
@@ -7,6 +7,6 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$checkradio_bg_color:      if($variant == 'light', $selected_bg_color, lighten($selected_bg_color, 10%));
+$checkradio_bg_color:      $selected_bg_color;
 $checkradio_fg_color:      $selected_fg_color;
-$checkradio_borders_color: if($variant == 'light', darken($checkradio_bg_color, 20%), darken($checkradio_bg_color, 40%));
+$checkradio_borders_color: darken($checkradio_bg_color, 20%);
