--- a/themes/gtk-3.0-base/colors/menu.scss
+++ b/themes/gtk-3.0-base/colors/menu.scss
@@ -7,5 +7,5 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$menu_color:         $base_color !default;
-$menu_borders_color: #ACA889 !default;
+$menu_color:         $menu_bg !default;
+$menu_borders_color: $bg_color !default;
