--- a/themes/gtk-3.0-base/colors/selected-text.scss
+++ b/themes/gtk-3.0-base/colors/selected-text.scss
@@ -7,5 +7,5 @@
  * Author(s): Rory Fewell <roryf@oddmatics.uk>
  */
 
-$selected_fg_color: #FFFFFF !default;
-$selected_bg_color: #316AC5 !default;
+$selected_fg_color: $selected_items_fg !default;
+$selected_bg_color: $selected_items_bg !default;
